--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -259,7 +259,7 @@
         }
     }
 
-    .firepower {
+    .firepower_section {
         display: flex;
         flex-flow: column wrap;
 
@@ -292,8 +292,6 @@
                     position: relative;
 
                     strong {
-                        color: $white;
-
                         &:hover {
                             ~ .tooltip {
                                 display: block;
@@ -319,91 +317,97 @@
         }
     }
 
-    .spellcasting {
-        .spells {
+    .spells_section {
+        margin-top: 0.5rem;
 
-        }
-        .spell_levels {
-            .spell_row {
-                display: flex;
-                flex-flow: row nowrap;
-                align-items: center;
-                justify-content: flex-end;
-                gap: 0.5rem;
-
-                .level_slots {
+        .spellcasting {
+            .spells {
+                .spell {
+                    
+                }
+            }
+            .spell_levels {
+                .spell_row {
                     display: flex;
                     flex-flow: row nowrap;
                     align-items: center;
-                    gap: 0.2rem;
-
-                    .spellslot {
-                        height: 100%;
-                        display: inline-block;
-                        position: relative;
-                        padding-left: 1.4rem;
-                        // margin-bottom: 12px;
-                        cursor: pointer;
-                        -webkit-user-select: none;
-                        -moz-user-select: none;
-                        -ms-user-select: none;
-                        user-select: none;
+                    justify-content: flex-end;
+                    gap: 0.5rem;
     
-                        > input {
-                            position: absolute;
-                            opacity: 0;
+                    .level_slots {
+                        display: flex;
+                        flex-flow: row nowrap;
+                        align-items: center;
+                        gap: 0.2rem;
+    
+                        .spellslot {
+                            height: 100%;
+                            display: inline-block;
+                            position: relative;
+                            padding-left: 1.4rem;
+                            // margin-bottom: 12px;
                             cursor: pointer;
-                            height: 0;
-                            width: 0;
+                            -webkit-user-select: none;
+                            -moz-user-select: none;
+                            -ms-user-select: none;
+                            user-select: none;
+        
+                            > input {
+                                position: absolute;
+                                opacity: 0;
+                                cursor: pointer;
+                                height: 0;
+                                width: 0;
+        
+                                &:checked {
+                                    ~ .checkmark {
+                                        background-color: $red;
+        
+                                        // &:after {
+                                        //     display: block;
+                                        //     width: 100%;
+                                        //     height: 100%;
     
-                            &:checked {
-                                ~ .checkmark {
-                                    background-color: $red;
-    
-                                    // &:after {
-                                    //     display: block;
-                                    //     width: 100%;
-                                    //     height: 100%;
-
-                                    //     content: "";
-                                    //     border: solid $grey;
-                                    //     border-width: 0 0.2rem 0 0;
-                                    //     -webkit-transform: rotate(45deg);
-                                    //     -ms-transform: rotate(45deg);
-                                    //     transform: rotate(45deg);
-                                    // }
+                                        //     content: "";
+                                        //     border: solid $grey;
+                                        //     border-width: 0 0.2rem 0 0;
+                                        //     -webkit-transform: rotate(45deg);
+                                        //     -ms-transform: rotate(45deg);
+                                        //     transform: rotate(45deg);
+                                        // }
+                                    }
+                                }
+                            }
+        
+                            > span {
+                                position: absolute;
+                                top: -0.5rem;
+                                left: 0;
+                                height: 1.4rem;
+                                width: 1.4rem;
+                                background-color: $grey;
+        
+                                &:after {
+                                    content: "4";
+                                    position: absolute;
+                                    display: none;
+                                    text-align: center;
+                                }
+                            }
+        
+                            &:hover {
+                                .checkmark {
+                                    background-color: $blue;
                                 }
                             }
                         }
-    
-                        > span {
-                            position: absolute;
-                            top: -0.5rem;
-                            left: 0;
-                            height: 1.4rem;
-                            width: 1.4rem;
-                            background-color: $grey;
-    
-                            &:after {
-                                content: "4";
-                                position: absolute;
-                                display: none;
-                                text-align: center;
-                            }
-                        }
-    
-                        &:hover {
-                            .checkmark {
-                                background-color: $blue;
-                            }
-                        }
                     }
-                }
-
-                .spell_level {
-                    display: inline-block;
-                    width: 1rem;
-                    font-size: 1.5rem;
+    
+                    .spell_level {
+                        display: inline-block;
+                        width: 1rem;
+                        font-size: 1.5rem;
+                    }
                 }
             }
         }
