--- a/styles/Players.module.scss
+++ b/styles/Players.module.scss
@@ -298,20 +298,6 @@
                             }
                         }
                     }
-
-                    .tooltip {
-                        position: absolute;
-                        top: 3rem;
-                        z-index: 1;
-                        width: 50rem;
-                        display: none;
-                        background-color: $grey;
-                        border: 4px solid $orange;
-                        padding: 1rem;
-                        font-size: 1.6rem;
-                        font-style: italic;
-                        color: $white;
-                    }
                 }
             }
         }
@@ -323,7 +309,7 @@
         .spellcasting {
             .spells {
                 .spell {
-                    
+
                 }
             }
             .spell_levels {
@@ -457,23 +443,10 @@
                     font-size: 1.4rem;
 
                     &:hover {
-                        ~ .feature_effect {
+                        ~ .tooltip {
                             display: block;
                         }
                     }
-                }
-                .feature_effect {
-                    position: absolute;
-                    top: 3rem;
-                    z-index: 1;
-                    width: 50rem;
-                    display: none;
-                    background-color: $grey;
-                    border: 4px solid $orange;
-                    padding: 1rem;
-                    font-size: 1.6rem;
-                    font-style: italic;
-                    color: $white;
                 }
             }
         }
@@ -532,4 +505,23 @@
     padding: 0.1rem 0.5rem;
     text-align: center;
     color: $white;
+}
+
+.tooltip {
+    position: absolute;
+    top: 3rem;
+    z-index: 1;
+    width: 50rem;
+    display: none;
+    background-color: $grey;
+    border: 4px solid $white;
+    padding: 1rem;
+    font-size: 1.6rem;
+    font-style: italic;
+    color: $white;
+    text-indent: 0;
+
+    &.uncommon {
+        border-color: $green;
+    }
 }
